<resources>
    <string name="app_name">MovieApp</string>
    <string name="popular_movies">Most Popular</string>
    <string name="top_rated_movies">Highest Rated</string>
    <string name="detail_poster_description">Detail Poster Thumbnail</string>
    <string name="splash_icon_description">Splash Icon</string>
    <string name="adapter_movies_poster_description">Adapter Movies Poster Thumbnail</string>
    <string name="detail_title">Title Movies</string>
    <string name="detail_overview_title">Description</string>
    <string name="detail_overview_default">Description movies</string>
    <string name="detail_rating_title">Rating</string>
    <string name="detail_rating_default">8 of 10</string>
    <string name="detail_release_title">Release Date</string>
    <string name="detail_release_default">Release on July 24th, 2017</string>
    <string name="detail_rating_of"> of 10</string>
    <string name="popular_movies_title">Let\'s see your favourite movie</string>
    <string name="splash_creator">Created by Rayza Al Khensha</string>
    <string name="error_text">Internet Connection Problem. \n Please try again.</string>
    <string name="detail_review_title">Movie Review :</string>
    <string name="detail_trailer_title">Movie Trailers :</string>
    <string name="adapter_trailers_image_description">Adapter Trailers Image Youtube Thumbnail</string>
    <string name="favorite_movies">Favorite</string>
    <string name="set_favorite_star">Set as Favorite</string>
    <string name="share_movie">Share Movie</string>
    <string name="log_error_result_data">errorResultData</string>
    <string name="toast_favorite_success">You favorite this movie.</string>
    <string name="toast_favorite_failed">Failed to favorite this movie.</string>
    <string name="toast_unfavorite_success">You unfavorite this movie.</string>
    <string name="toast_unfavorite_failed">Failed to unfavorite this movie.</string>
    <string name="youtube_video">YouTube</string>
    <string name="video_play_error">This video can\'t be played</string>
</resources>
