<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_nsv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:padding="@dimen/detail_layout_padding">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/detail_title_padding_bottom"
            android:text="@string/detail_title"
            android:textSize="@dimen/detail_title_text_size"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_poster"
                android:layout_width="@dimen/detail_poster_width"
                android:layout_height="@dimen/detail_poster_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/detail_poster_description"
                android:src="@mipmap/ic_movies" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_content_margin_start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_overview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_overview_title"
                    android:textSize="@dimen/detail_overview_title_text_size" />

                <TextView
                    android:id="@+id/detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_overview_default"
                    android:textSize="@dimen/detail_overview_text_size" />

                <TextView
                    android:id="@+id/detail_rating_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detail_rating_title_margin_top"
                    android:text="@string/detail_rating_title"
                    android:textSize="@dimen/detail_rating_title_text_size" />

                <TextView
                    android:id="@+id/detail_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_rating_default"
                    android:textSize="@dimen/detail_rating_text_size" />

                <TextView
                    android:id="@+id/detail_release_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detail_release_title_margin_top"
                    android:text="@string/detail_release_title"
                    android:textSize="@dimen/detail_release_title_text_size" />

                <TextView
                    android:id="@+id/detail_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_release_default"
                    android:textSize="@dimen/detail_release_text_size" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/detail_review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_review_title_margin_top"
            android:text="@string/detail_review_title"
            android:textSize="@dimen/detail_review_title_text_size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_trailer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_trailer_title_margin_top"
            android:text="@string/detail_trailer_title"
            android:textSize="@dimen/detail_trailer_title_text_size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_trailer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>